Changes bltheme to indigo

--- a/src/themes/bl.theme.scss
+++ b/src/themes/bl.theme.scss
@@ -4,7 +4,7 @@
 
 
 // light theme
-$bl-theme-primary: mat-palette($mat-grey);
+$bl-theme-primary: mat-palette($mat-indigo);
 $bl-theme-accent : mat-palette($mat-orange);
 $bl-theme-warn   : mat-palette($mat-red);
 
